full-moon/tests/roblox_cases/fail/parser/function_return_type_thin_arrow/error_display.snap
---
source: full-moon/tests/fail_cases.rs
expression: "String::from_utf8(output.into_inner()).unwrap()"
---
error[ast]: function return type annotations should use `:` instead of `->`
  ┌─ source.lua:1:16
  │
1 │ function foo() -> string
  │                ^^


